--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,6 +5,13 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
+:root {
+	--black:#000000;
+	
+}
+.services #table {
+	color:var(--black);
+}
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
