--- a/public/css/main.css
+++ b/public/css/main.css
@@ -283,8 +283,8 @@ input, select, textarea {
 		text-align: right;
 	}
 
-/* Row */
-
+ /* Row */
+/*
 	.row {
 		display: flex;
 		flex-wrap: wrap;
@@ -1749,11 +1749,11 @@ input, select, textarea {
 							padding-top: 3em;
 						}
 
-		}
+		} */
 
 /* Section/Article */
-
-	section.special, article.special {
+/*
+	 section.special, article.special {
 		text-align: center;
 	}
 
@@ -1812,7 +1812,7 @@ input, select, textarea {
 	}
 
 /* Form */
-
+/* 
 	form {
 		margin: 0 0 2em 0;
 	}
@@ -1987,7 +1987,7 @@ input, select, textarea {
 	}
 
 /* Box */
-
+ /*
 	.box {
 		border-radius: 3px;
 		border: solid 2px #fff;
@@ -2005,10 +2005,10 @@ input, select, textarea {
 			border: 0;
 			border-radius: 0;
 			padding: 0;
-		}
+		} */
 
 /* Icon */
-
+/*
 	.icon {
 		text-decoration: none;
 		border-bottom: none;
@@ -2089,7 +2089,7 @@ input, select, textarea {
 		}
 
 /* Image */
-
+/*
 	.image {
 		border-radius: 3px;
 		border: 0;
@@ -2130,11 +2130,11 @@ input, select, textarea {
 
 			.image.fit img {
 				width: 100%;
-			}
+			} */
 
 /* List */
-
-	ol {
+/*
+	 ol {
 		list-style: decimal;
 		margin: 0 0 2em 0;
 		padding-left: 1.25em;
@@ -2171,11 +2171,11 @@ input, select, textarea {
 
 	dl {
 		margin: 0 0 2em 0;
-	}
+	} */
 
 /* Actions */
-
-	ul.actions {
+/*
+	 ul.actions {
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
@@ -2293,11 +2293,11 @@ input, select, textarea {
 							margin-left: -0.5em;
 						}
 
-		}
+		} */
 
 /* Icons */
 
-	ul.icons {
+	/* ul.icons {
 		cursor: default;
 		list-style: none;
 		padding-left: 0;
@@ -2326,11 +2326,11 @@ input, select, textarea {
 						padding: 0 1em !important;
 					}
 
-				}
+				} */
 
 /* Table */
-
-	.table-wrapper {
+/*
+	 .table-wrapper {
 		-webkit-overflow-scrolling: touch;
 		overflow-x: auto;
 	}
@@ -2394,11 +2394,11 @@ input, select, textarea {
 
 			table.alt tfoot {
 				border-top: 0;
-			}
+			} */
 
 /* Button */
 
-	input[type="submit"],
+	 input[type="submit"],
 	input[type="reset"],
 	input[type="button"],
 	button,
@@ -2531,11 +2531,11 @@ input, select, textarea {
 				line-height: 3.75em;
 			}
 
-		}
+		} */
 
 /* Features */
-
-	.features {
+ 
+	 .features {
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
@@ -2655,11 +2655,11 @@ input, select, textarea {
 						border-top: 0;
 					}
 
-			}
+			} 
 
 /* Spotlight */
 
-	.spotlight {
+	 .spotlight {
 		-moz-align-items: center;
 		-webkit-align-items: center;
 		-ms-align-items: center;
@@ -2782,7 +2782,7 @@ input, select, textarea {
 				padding: 3em 2em 1em 2em ;
 			}
 
-		}
+		}  */
 
 /* Wrapper */
 
@@ -3550,17 +3550,17 @@ input, select, textarea {
 						margin-left: 0;
 					}
 
-		#header.alt {
+		/* #header.alt {
 			background: transparent;
 		}
 
 			#header.alt h1 {
 				pointer-events: none;
 				opacity: 0;
-			}
+			} */
 
 /* Banner */
-
+/*
 	#banner {
 		display: -moz-flex;
 		display: -webkit-flex;
@@ -3960,7 +3960,7 @@ input, select, textarea {
 		}
 
 /* Landing */
-
+/*
 	body.landing #page-wrapper {
 		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
 		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
