Finished the html and css for the first page, went through all the css and commented out alot of uneccessary code, and I also deleted some files

--- a/public/css/noscript.css
+++ b/public/css/noscript.css
@@ -6,7 +6,7 @@
 
 /* Banner */
 
-	body.is-preload #banner h2 {
+	/* body.is-preload #banner h2 {
 		-moz-transform: none;
 		-webkit-transform: none;
 		-ms-transform: none;
@@ -28,4 +28,4 @@
 
 	body.is-preload #banner:after {
 		opacity: 0;
-	}
+	} */
