--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,15 +5,15 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
-:root {
-	--black:#000000;
+ /* :root {
+	--black: black;
 	
-}
-.services #table {
+} 
+ .services #table {
 	color:var(--black);
-}
+}  */
 
-html, body, div, span, applet, object,
+/* html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
 code, del, dfn, em, img, ins, kbd, q, s, samp,
@@ -29,74 +29,80 @@ section, summary, time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;}
+	vertical-align: baseline;} */
 
-article, aside, details, figcaption, figure,
+/* article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
 
 body {
 	line-height: 1;
-}
+} */
 
 ol, ul {
 	list-style: none;
 }
 
-blockquote, q {
+/* blockquote, q {
 	quotes: none;
-}
+} */
 
-	blockquote:before, blockquote:after, q:before, q:after {
+	/* blockquote:before, blockquote:after, q:before, q:after {
 		content: '';
 		content: none;
-	}
+	} */
 
-table {
+/* table {
 	border-collapse: collapse;
 	border-spacing: 0;
-}
+} */
 
-body {
+/* body {
 	-webkit-text-size-adjust: none;
-}
+} */
 
-mark {
+/* mark {
 	background-color: transparent;
 	color: inherit;
-}
+} */
 
-input::-moz-focus-inner {
+/* input::-moz-focus-inner {
 	border: 0;
 	padding: 0;
-}
+} */
 
-input, select, textarea {
+/* input, select, textarea {
 	-moz-appearance: none;
 	-webkit-appearance: none;
 	-ms-appearance: none;
 	appearance: none;
-}
+} */
 
 /* Basic */
 
-	@-ms-viewport {
-		width: device-width;
-	}
-
+	/* @-ms-viewport {
+		width: 100%;
+	} */
+ 
 	html {
 		box-sizing: border-box;
 	}
 
 	*, *:before, *:after {
 		box-sizing: inherit;
+		margin: 0;
+	  padding: 0;
+	  border: 0;
+	  font-size: 100%;
+	  font: inherit;
+		vertical-align: baseline;
 	}
 
 	body {
-		background: #2e3842;
+		background: grey;
 	}
 
-		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
+		/* body.is-preload *, body.is-preload *:before, body.is-preload *:after {
 			-moz-animation: none !important;
 			-webkit-animation: none !important;
 			-ms-animation: none !important;
@@ -105,12 +111,12 @@ input, select, textarea {
 			-webkit-transition: none !important;
 			-ms-transition: none !important;
 			transition: none !important;
-		}
+		} */
 
 	body, input, select, textarea {
-		color: #fff;
+		color: black;
 		font-family: "Open Sans", Helvetica, sans-serif;
-		font-size: 15pt;
+		font-size: 1.4rem;
 		font-weight: 400;
 		letter-spacing: 0.075em;
 		line-height: 1.65em;
@@ -119,7 +125,7 @@ input, select, textarea {
 		@media screen and (max-width: 1680px) {
 
 			body, input, select, textarea {
-				font-size: 13pt;
+				font-size: 14pt;
 			}
 
 		}
@@ -127,7 +133,7 @@ input, select, textarea {
 		@media screen and (max-width: 1280px) {
 
 			body, input, select, textarea {
-				font-size: 12pt;
+				font-size: 13pt;
 			}
 
 		}
@@ -135,7 +141,7 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			body, input, select, textarea {
-				font-size: 11pt;
+				font-size: 12pt;
 				letter-spacing: 0.0375em;
 			}
 
@@ -151,25 +157,25 @@ input, select, textarea {
 		text-decoration: none;
 	}
 
-		a:hover {
+		/* a:hover {
 			border-bottom-color: transparent;
-		}
+		} */
 
-	strong, b {
+	/* strong, b {
 		color: #fff;
 		font-weight: 600;
-	}
+	} */
 
-	em, i {
+	/* em, i {
 		font-style: italic;
-	}
+	} */
 
 	p {
 		margin: 0 0 2em 0;
 	}
 
-	h1, h2, h3, h4, h5, h6 {
-		color: #fff;
+	h1 {
+		color: white;
 		font-weight: 800;
 		letter-spacing: 0.225em;
 		line-height: 1em;
@@ -177,27 +183,36 @@ input, select, textarea {
 		text-transform: uppercase;
 	}
 
-		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+	h2 {
+		color: black;
+		font-weight: 800;
+		letter-spacing: 0.225em;
+		line-height: 1em;
+		margin: 0 0 1em 0;
+		text-transform: uppercase;
+	}
+
+		h1 a, h2 a {
 			color: inherit;
 			text-decoration: none;
 		}
 
 	h2 {
-		font-size: 1.35em;
-		line-height: 1.75em;
+		font-size: 2em;
+		line-height: 0.75em;
 	}
 
 		@media screen and (max-width: 736px) {
 
 			h2 {
-				font-size: 1.1em;
-				line-height: 1.65em;
+				font-size: 1.75em;
+				line-height: 1em;
 			}
 
 		}
 
-	h3 {
-		font-size: 1.15em;
+	/* h3 {
+		font-size: 2em;
 		line-height: 1.75em;
 	}
 
@@ -223,9 +238,9 @@ input, select, textarea {
 	h6 {
 		font-size: 0.7em;
 		line-height: 1.5em;
-	}
+	} */
 
-	sub {
+	/* sub {
 		font-size: 0.8em;
 		position: relative;
 		top: 0.5em;
@@ -288,7 +303,7 @@ input, select, textarea {
 
 	.align-right {
 		text-align: right;
-	}
+	} */
 
  /* Row */
 /*
@@ -2096,6 +2111,7 @@ input, select, textarea {
 		}
 
 /* Image */
+
 /*
 	.image {
 		border-radius: 3px;
@@ -2410,14 +2426,14 @@ input, select, textarea {
 	input[type="button"],
 	button,
 	.button {
-		-moz-appearance: none;
+		/* -moz-appearance: none;
 		-webkit-appearance: none;
 		-ms-appearance: none;
 		appearance: none;
 		-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out; */
 		background-color: transparent;
 		border-radius: 3px;
 		border: 0;
@@ -2440,29 +2456,29 @@ input, select, textarea {
 		text-overflow: ellipsis;
 	}
 
-		input[type="submit"]:hover,
+		/* input[type="submit"]:hover,
 		input[type="reset"]:hover,
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
 			background-color: rgba(144, 144, 144, 0.25);
-		}
+		} */
 
-		input[type="submit"]:active,
+		/* input[type="submit"]:active,
 		input[type="reset"]:active,
 		input[type="button"]:active,
 		button:active,
 		.button:active {
 			background-color: rgba(144, 144, 144, 0.5);
-		}
+		} */
 
-		input[type="submit"].icon:before,
+		/* input[type="submit"].icon:before,
 		input[type="reset"].icon:before,
 		input[type="button"].icon:before,
 		button.icon:before,
 		.button.icon:before {
 			margin-right: 0.5em;
-		}
+		} */
 
 		input[type="submit"].fit,
 		input[type="reset"].fit,
@@ -2470,32 +2486,32 @@ input, select, textarea {
 		button.fit,
 		.button.fit {
 			width: 100%;
-		}
+		} 
 
-		input[type="submit"].small,
+		/* input[type="submit"].small,
 		input[type="reset"].small,
 		input[type="button"].small,
 		button.small,
 		.button.small {
 			font-size: 0.8em;
-		}
+		} */
 
-		input[type="submit"].large,
+		/* input[type="submit"].large,
 		input[type="reset"].large,
 		input[type="button"].large,
 		button.large,
 		.button.large {
 			font-size: 1.35em;
-		}
+		} */
 
 		input[type="submit"].primary,
 		input[type="reset"].primary,
 		input[type="button"].primary,
 		button.primary,
 		.button.primary {
-			background-color: #ed4933;
+			background-color: black;
 			box-shadow: none !important;
-			color: #ffffff !important;
+			color: white !important;
 		}
 
 			input[type="submit"].primary:hover,
@@ -2503,7 +2519,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #ef5e4a !important;
+				background-color: #4C4C4C !important;
 			}
 
 			input[type="submit"].primary:active,
@@ -2511,10 +2527,10 @@ input, select, textarea {
 			input[type="button"].primary:active,
 			button.primary:active,
 			.button.primary:active {
-				background-color: #eb341c !important;
+				background-color: black !important;
 			}
 
-		input[type="submit"].disabled, input[type="submit"]:disabled,
+		/* input[type="submit"].disabled, input[type="submit"]:disabled,
 		input[type="reset"].disabled,
 		input[type="reset"]:disabled,
 		input[type="button"].disabled,
@@ -2525,7 +2541,7 @@ input, select, textarea {
 		.button:disabled {
 			pointer-events: none;
 			opacity: 0.25;
-		}
+		} */
 
 		@media screen and (max-width: 736px) {
 
@@ -2542,7 +2558,7 @@ input, select, textarea {
 
 /* Features */
  
-	 .features {
+	 /* .features {
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
@@ -2558,17 +2574,17 @@ input, select, textarea {
 		list-style: none;
 		padding: 0;
 		width: 100%;
-	}
+	} */
 
-		.features li {
+		/* .features li {
 			padding: 4em 4em 2em 6em ;
 			display: block;
 			position: relative;
 			text-align: left;
 			width: 50%;
-		}
+		} */
 
-			.features li:nth-child(1) {
+			/* .features li:nth-child(1) {
 				background-color: rgba(0, 0, 0, 0.035);
 			}
 
@@ -2606,18 +2622,17 @@ input, select, textarea {
 
 			.features li:nth-child(10) {
 				background-color: rgba(0, 0, 0, 0.35);
-			}
+			} */
 
 			.features li:before {
 				display: block;
-				color: #00ffcc;
 				position: absolute;
 				left: 1.75em;
 				top: 2.75em;
 				font-size: 1.5em;
 			}
 
-			.features li:nth-child(1) {
+			/* .features li:nth-child(1) {
 				border-top-left-radius: 3px;
 			}
 
@@ -2631,9 +2646,9 @@ input, select, textarea {
 
 			.features li:nth-last-child(2) {
 				border-bottom-left-radius: 3px;
-			}
+			} */
 
-			@media screen and (max-width: 980px) {
+			/* @media screen and (max-width: 980px) {
 
 				.features li {
 					padding: 3em 2em 1em 2em ;
@@ -2662,29 +2677,43 @@ input, select, textarea {
 						border-top: 0;
 					}
 
-			} 
+			} */
 
 /* Spotlight */
 
 	 .spotlight {
-		-moz-align-items: center;
+		background-color: white;
+		border-top: 20px;
+		border-color: black;
+		border-style: solid;
+		/* -moz-align-items: center;
 		-webkit-align-items: center;
-		-ms-align-items: center;
+		-ms-align-items: center; */
 		align-items: center;
-		display: -moz-flex;
-		display: -webkit-flex;
-		display: -ms-flex;
 		display: flex;
 	}
 
-		.spotlight .image {
+	.image-main {
+		padding-top: 70px;
+		justify-content: center;
+		display: flex;
+		height: 600px;
+		width: 100%;
+		background-color: white;
+	}
+	
+	.image {
+		height: 500px;
+		display: flex;
+	}
+
+		/* .spotlight .image {
 			-moz-order: 1;
 			-webkit-order: 1;
 			-ms-order: 1;
 			order: 1;
 			border-radius: 0;
-			width: 40%;
-		}
+		} */
 
 			.spotlight .image img {
 				border-radius: 0;
@@ -2693,10 +2722,10 @@ input, select, textarea {
 
 		.spotlight .content {
 			padding: 2em 4em 0.1em 4em ;
-			-moz-order: 2;
+			/* -moz-order: 2;
 			-webkit-order: 2;
 			-ms-order: 2;
-			order: 2;
+			order: 2; */
 			max-width: 48em;
 			width: 60%;
 		}
@@ -2708,7 +2737,7 @@ input, select, textarea {
 			flex-direction: row-reverse;
 		}
 
-		.spotlight:nth-child(1) {
+		/* .spotlight:nth-child(1) {
 			background-color: rgba(0, 0, 0, 0.075);
 		}
 
@@ -2746,16 +2775,17 @@ input, select, textarea {
 
 		.spotlight:nth-child(10) {
 			background-color: rgba(0, 0, 0, 0.75);
-		}
+		} */
 
 		@media screen and (max-width: 1280px) {
 
 			.spotlight .image {
-				width: 45%;
+				width: 50%;
+				height: 100%;
 			}
 
 			.spotlight .content {
-				width: 55%;
+				width: 50%;
 			}
 
 		}
@@ -2822,7 +2852,7 @@ input, select, textarea {
 			padding: 0;
 		}
 
-		.wrapper.style1 {
+		/* .wrapper.style1 {
 			background-color: #21b2a6;
 			color: #c8ece9;
 		}
@@ -2845,7 +2875,7 @@ input, select, textarea {
 
 			.wrapper.style1 code {
 				background: rgba(255, 255, 255, 0.075);
-			}
+			} 
 
 			.wrapper.style1 header p {
 				color: #a6e0db;
@@ -2861,7 +2891,7 @@ input, select, textarea {
 
 			.wrapper.style1 label {
 				color: #ffffff;
-			}
+			} 
 
 			.wrapper.style1 input[type="text"],
 			.wrapper.style1 input[type="password"],
@@ -3325,17 +3355,16 @@ input, select, textarea {
 
 /* Page Wrapper + Menu */
 
-	#page-wrapper {
+	/* #page-wrapper {
 		-moz-transition: opacity 0.5s ease;
 		-webkit-transition: opacity 0.5s ease;
 		-ms-transition: opacity 0.5s ease;
 		transition: opacity 0.5s ease;
 		opacity: 1;
 		padding-top: 3em;
-	}
+	} */
 
 		#page-wrapper:before {
-			background: rgba(0, 0, 0, 0);
 			content: '';
 			display: block;
 			display: none;
@@ -3357,8 +3386,8 @@ input, select, textarea {
 		-ms-transition: -ms-transform 0.5s ease;
 		transition: transform 0.5s ease;
 		-webkit-overflow-scrolling: touch;
-		background: #21b2a6;
-		color: #ffffff;
+		background: black;
+		color: white;
 		height: 100%;
 		max-width: 80%;
 		overflow-y: auto;
@@ -3376,7 +3405,7 @@ input, select, textarea {
 		}
 
 			#menu ul > li {
-				border-top: solid 1px rgba(0, 0, 0, 0.125);
+				border-top: solid 1px white;
 				margin: 0.5em 0 0 0;
 				padding: 0.5em 0 0 0;
 			}
@@ -3407,7 +3436,7 @@ input, select, textarea {
 					}
 
 		#menu .close {
-			background-image: url("images/close.svg");
+			/* background-image: url("images/close.svg"); */
 			background-position: 4.85em 1em;
 			background-repeat: no-repeat;
 			border: 0;
@@ -3446,27 +3475,28 @@ input, select, textarea {
 /* Header */
 
 	#header {
-		-moz-transition: background-color 0.2s ease;
+		/* -moz-transition: background-color 0.2s ease;
 		-webkit-transition: background-color 0.2s ease;
 		-ms-transition: background-color 0.2s ease;
-		transition: background-color 0.2s ease;
-		background: #2e3842;
-		height: 3em;
+		transition: background-color 0.2s ease; */
+		background: black;
+		height: 3.5em;
 		left: 0;
-		line-height: 3em;
-		position: fixed;
+		line-height: 3.5em;
+		/* position: fixed; */
 		top: 0;
 		width: 100%;
 		z-index: 10000;
 	}
 
 		#header h1 {
-			-moz-transition: opacity 0.2s ease;
+			font-size: 4rem;
+			/* -moz-transition: opacity 0.2s ease;
 			-webkit-transition: opacity 0.2s ease;
 			-ms-transition: opacity 0.2s ease;
-			transition: opacity 0.2s ease;
+			transition: opacity 0.2s ease; */
 			height: inherit;
-			left: 1.25em;
+			left: 1em;
 			line-height: inherit;
 			position: absolute;
 			top: 0;
@@ -3482,7 +3512,23 @@ input, select, textarea {
 				@media screen and (max-width: 736px) {
 
 					#header h1 a {
-						font-size: 0.8em;
+						font-size: 0.75em;
+					}
+
+				}
+
+				@media screen and (max-width: 500px) {
+
+					#header nav > ul > li > a.menuToggle span {
+						display: none;
+					}
+
+				}
+
+				@media screen and (max-width: 350px) {
+
+					#header h1 {
+						left: 1rem;
 					}
 
 				}
@@ -3490,7 +3536,7 @@ input, select, textarea {
 		#header nav {
 			height: inherit;
 			line-height: inherit;
-			position: absolute;
+			position: absolute; 
 			right: 0;
 			top: 0;
 		}
@@ -3509,7 +3555,7 @@ input, select, textarea {
 
 					#header nav > ul > li > a {
 						border: 0;
-						color: #fff;
+						color: white;
 						display: block;
 						font-size: 0.8em;
 						letter-spacing: 0.225em;
@@ -3520,10 +3566,9 @@ input, select, textarea {
 						#header nav > ul > li > a.menuToggle {
 							outline: 0;
 							position: relative;
-						}
+						} 
 
-							#header nav > ul > li > a.menuToggle:after {
-								background-image: url("images/bars.svg");
+							 #header nav > ul > li > a.menuToggle:after {
 								background-position: right center;
 								background-repeat: no-repeat;
 								content: '';
@@ -3538,10 +3583,6 @@ input, select, textarea {
 								#header nav > ul > li > a.menuToggle {
 									padding: 0 1.5em;
 								}
-
-									#header nav > ul > li > a.menuToggle span {
-										display: none;
-									}
 
 							}
 
@@ -3757,7 +3798,7 @@ input, select, textarea {
 
 /* CTA */
 
-	#cta .inner {
+	/* #cta .inner {
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
@@ -3813,16 +3854,16 @@ input, select, textarea {
 				max-width: none;
 			}
 
-		}
+		} */
 
 /* Main */
 
 	#main > header {
 		padding: 12em 0 10em 0 ;
-		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
+		/* background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
 		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
 		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
-		background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
+		background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg"); */
 		background-attachment: fixed;
 		background-position: center center;
 		background-repeat: no-repeat;
@@ -3883,32 +3924,20 @@ input, select, textarea {
 
 		}
 
-	body.is-mobile #main > header {
+	/* body.is-mobile #main > header {
 		background-attachment: scroll;
-	}
+	} */
 
 /* Footer */
 
 	#footer {
 		padding: 6em 0 4em 0 ;
-		background-color: #1d242a;
+		background-color: black;
 		text-align: center;
 	}
 
-		#footer .icons {
-			font-size: 1.25em;
-		}
-
-			#footer .icons a {
-				color: rgba(255, 255, 255, 0.5);
-			}
-
-				#footer .icons a:hover {
-					color: #fff;
-				}
-
 		#footer .copyright {
-			color: rgba(255, 255, 255, 0.5);
+			color: white;
 			font-size: 0.8em;
 			letter-spacing: 0.225em;
 			list-style: none;
@@ -3917,7 +3946,7 @@ input, select, textarea {
 		}
 
 			#footer .copyright li {
-				border-left: solid 1px rgba(255, 255, 255, 0.5);
+				border-left: solid 1px white;
 				display: inline-block;
 				line-height: 1em;
 				margin-left: 1em;
@@ -3967,8 +3996,8 @@ input, select, textarea {
 		}
 
 /* Landing */
-/*
-	body.landing #page-wrapper {
+
+	/* body.landing #page-wrapper {
 		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
 		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
 		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
@@ -4001,4 +4030,4 @@ input, select, textarea {
 
 	body.is-mobile.landing #footer {
 		background-color: #1d242a;
-	}
+	} */
