--- a/public/css/login.css
+++ b/public/css/login.css
@@ -154,13 +154,13 @@ optgroup,
 select,
 textarea {
   font-family: inherit;
-  /* 1 */
+  
   font-size: 100%;
-  /* 1 */
+  
   line-height: 1.15;
-  /* 1 */
+  
   margin: 0;
-  /* 2 */
+  
 }
 
 /**
@@ -196,30 +196,30 @@ select {
 /**
  * Remove the inner border and padding in Firefox.
  */
-button::-moz-focus-inner,
+/* button::-moz-focus-inner,
 [type='button']::-moz-focus-inner,
 [type='reset']::-moz-focus-inner,
 [type='submit']::-moz-focus-inner {
   border-style: none;
   padding: 0;
-}
+} */
 
 /**
  * Restore the focus styles unset by the previous rule.
  */
-button:-moz-focusring,
+/* button:-moz-focusring,
 [type='button']:-moz-focusring,
 [type='reset']:-moz-focusring,
 [type='submit']:-moz-focusring {
   outline: 1px dotted ButtonText;
-}
+} */
 
 /**
  * Correct the padding in Firefox.
  */
-fieldset {
+/* fieldset {
   padding: 0.35em 0.75em 0.625em;
-}
+} */
 
 /**
  * 1. Correct the text wrapping in Edge and IE.
@@ -227,115 +227,104 @@ fieldset {
  * 3. Remove the padding so developers are not caught out when they zero out
  *    `fieldset` elements in all browsers.
  */
-legend {
+/* legend {
   box-sizing: border-box;
-  /* 1 */
   color: inherit;
-  /* 2 */
   display: table;
-  /* 1 */
   max-width: 100%;
-  /* 1 */
   padding: 0;
-  /* 3 */
   white-space: normal;
-  /* 1 */
-}
+} */
 
 /**
  * Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
-progress {
+/* progress {
   vertical-align: baseline;
-}
+} */
 
 /**
  * Remove the default vertical scrollbar in IE 10+.
  */
-textarea {
+/* textarea {
   overflow: auto;
-}
+} */
 
 /**
  * 1. Add the correct box sizing in IE 10.
  * 2. Remove the padding in IE 10.
  */
-[type='checkbox'],
+/* [type='checkbox'],
 [type='radio'] {
   box-sizing: border-box;
-  /* 1 */
   padding: 0;
-  /* 2 */
-}
+} */
 
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
-[type='number']::-webkit-inner-spin-button,
+/* [type='number']::-webkit-inner-spin-button,
 [type='number']::-webkit-outer-spin-button {
   height: auto;
-}
+} */
 
 /**
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
  */
-[type='search'] {
+/* [type='search'] { */
   /* -webkit-appearance: textfield; */
   /* 1 */
-  outline-offset: -2px;
-  /* 2 */
-}
+  /* outline-offset: -2px;
+} */
 
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
-[type='search']::-webkit-search-decoration {
+/* [type='search']::-webkit-search-decoration {
   -webkit-appearance: none;
-}
+} */
 
 /**
  * 1. Correct the inability to style clickable types in iOS and Safari.
  * 2. Change font properties to `inherit` in Safari.
  */
-::-webkit-file-upload-button {
+/* ::-webkit-file-upload-button {
   -webkit-appearance: button;
-  /* 1 */
   font: inherit;
-  /* 2 */
-}
+} */
 
 /* Interactive
    ========================================================================== */
 /*
  * Add the correct display in Edge, IE 10+, and Firefox.
  */
-details {
+/* details {
   display: block;
-}
+} */
 
 /*
  * Add the correct display in all browsers.
  */
-summary {
+/* summary {
   display: list-item;
-}
+} */
 
 /* Misc
    ========================================================================== */
 /**
  * Add the correct display in IE 10+.
  */
-template {
+/* template {
   display: none;
-}
+} */
 
 /**
  * Add the correct display in IE 10.
  */
-[hidden] {
+/* [hidden] {
   display: none;
-}
+} */
 
 /* 
 =================
@@ -430,7 +419,7 @@ a:hover {
 }
 
 /* HEIGHT / WIDTH UTILS */
-.w-100 {
+/* .w-100 {
   width: 100%;
 }
 
@@ -452,11 +441,11 @@ a:hover {
 
 .min-100-vw {
   min-width: 100vw;
-}
+} */
 
 /* MARGIN/PADDING UTILS */
 /* Margin - all sides */
-.m-0 {
+/* .m-0 {
   margin: 0;
 }
 
@@ -482,10 +471,10 @@ a:hover {
 
 .m-auto {
   margin: auto;
-}
+} */
 
 /* Margin-bottom */
-.mb-0 {
+/* .mb-0 {
   margin-bottom: 0;
 }
 
@@ -511,10 +500,10 @@ a:hover {
 
 .mb-auto {
   margin-bottom: auto;
-}
+} */
 
 /* Margin-top */
-.mt-0 {
+/* .mt-0 {
   margin-top: 0;
 }
 
@@ -540,10 +529,10 @@ a:hover {
 
 .mt-auto {
   margin-top: auto;
-}
+} */
 
 /* Margin-right */
-.mr-0 {
+/* .mr-0 {
   margin-right: 0;
 }
 
@@ -569,10 +558,10 @@ a:hover {
 
 .mr-auto {
   margin-right: auto;
-}
+} */
 
 /* Margin-left */
-.ml-0 {
+/* .ml-0 {
   margin-left: 0;
 }
 
@@ -598,10 +587,10 @@ a:hover {
 
 .ml-auto {
   margin-left: auto;
-}
+} */
 
 /* Margin - x axis */
-.mx-0 {
+/* .mx-0 {
   margin-right: 0;
   margin-left: 0;
 }
@@ -634,10 +623,10 @@ a:hover {
 .mx-auto {
   margin-right: auto;
   margin-left: auto;
-}
+} */
 
 /* Margin - y axis */
-.my-0 {
+/* .my-0 {
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -670,10 +659,10 @@ a:hover {
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
-}
+} */
 
 /* Padding - all sides */
-.p-0 {
+/* .p-0 {
   padding: 0;
 }
 
@@ -695,10 +684,10 @@ a:hover {
 
 .p-5 {
   padding: 1.625rem;
-}
+} */
 
 /* padding-bottom */
-.pb-0 {
+/* .pb-0 {
   padding-bottom: 0;
 }
 
@@ -720,7 +709,7 @@ a:hover {
 
 .pb-5 {
   padding-bottom: 1.625rem;
-}
+} */
 
 /* padding-top */
 .pt-0 {
