--- a/public/css/main.css
+++ b/public/css/main.css
@@ -98,9 +98,9 @@ input, select, textarea {
 		vertical-align: baseline;
 	}
 
-	body {
+	/* body {
 		background: grey;
-	}
+	} */
 
 		/* body.is-preload *, body.is-preload *:before, body.is-preload *:after {
 			-moz-animation: none !important;
@@ -2437,7 +2437,7 @@ input, select, textarea {
 		background-color: transparent;
 		border-radius: 3px;
 		border: 0;
-		box-shadow: inset 0 0 0 2px #fff;
+		/* box-shadow: inset 0 0 0 2px #fff; */
 		color: #fff;
 		cursor: pointer;
 		display: inline-block;
