updated productData.json and products.handlebars

--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -5,6 +5,7 @@
         <td>{{product.description}}</td>
         <td>{{product.price}}</td>
         <td>{{product.stock}}</td>
+        <td>{{product.image}}</td>
         <th><button id={{product.id}}>add to cart</button></th>
     </tr>
     {{/each}}
