--- a/views/landingpage.handlebars
+++ b/views/landingpage.handlebars
@@ -3,28 +3,25 @@
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">Petopia</a></h1>
-						<nav id="nav">
-							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<!-- <li><a href="/spas">Pet spa</a></li>
-											look at routes for names -->
-											<li><a href="/landingpage">Home</a></li>
-											<li><a href="/hotels">Pet Hotel</a></li>
-											<li><a href="/spas">Pet Spa</a></li>
-											<li><a href="/login">Log In</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
-					</header>
 
+	<header id="header" class="alt">
+		<h1><a href="/landingpage">Petopia</a></h1>
+		<nav id="nav">
+			<ul>
+				<li class="special">
+					<a href="#menu" class="menuToggle"><span>Menu</span></a>
+					<div id="menu">
+						<ul>
+							<li><a href="/landingpage">Home</a></li>
+							<li><a href="/hotels">Pet Hotel</a></li>
+							<li><a href="/spas">Pet Spa</a></li>
+							<li><a href="/login">Log In</a></li>
+						</ul>
+					</div>
+				</li>
+			</ul>
+		</nav>
+	</header>
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
@@ -37,33 +34,25 @@
 						<section class="spotlight">
 							<div class="image"><img src="./images/unsplash-image-s9Tf1eBDFqw.jpg" alt="" /></div><div class="content">
 								<h2>Pet Hotel</h2>
-								<p>If your in need of someone to watch your pet while your away, look no further as our pet hotel is the perfect place. We have many highly trained caretakers that take lots of pride in what they do and will watch, feed, and play with your animal until you get back.<p>
+								<p>If you're in need of someone to watch your pet while you're away, look no further as our pet hotel is the purrrfect place. We have many highly trained caretakers that take lots of pride in what they do and will watch, feed, and play with your animal until you get back.<p>
 								<a href="/hotels" class="button fit primary">Take Me There</a>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="./images/DL2.jpg" alt="" /></div><div class="content">
 								<h2>Pet Spa</h2>
-								<p>We also offer pet grooming services, at our Pet Spa. Whether you want your animal to get a trim up, a wash, or a full on spa treatment our Pet Spa is the place for you and your animal. <p>
+								<p>We also offer pet grooming services at our Pet Spa. Whether you want your animal to get a trim up, a wash, or a full-on spa treatment, our Pet Spa is the place for you and your animal. <p>
 								<a href="/spas" class="button fit primary">Take Me There</a>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="./images/GettyImages-1215180165.jpg" alt="" /></div><div class="content">
 								<h2>Pet Products</h2>
-								<p>If your in need of a restock on pet food, treats, or are looking for a new toy for your pet to enjoy, check out our Pet Products page. <p>
+								<p>If you're in need of a restock on pet food, treats, or are looking for a new toy for your pet to enjoy, check out our Pet Products page.<p>
 								<a href="#" class="button fit primary">Take Me There</a>
 							</div>
 						</section>
 					</section>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="copyright">
-							<li>By. Mylan, Marlena, Tyler, & Linkin</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
-
 			</div>
 
 		<!-- Scripts -->
