--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -1,4 +1,21 @@
-<body>
+  <header id="header" class="alt">
+		<h1><a href="/landingpage">Petopia</a></h1>
+		<nav id="nav">
+			<ul>
+				<li class="special">
+					<a href="#menu" class="menuToggle"><span>Menu</span></a>
+					<div id="menu">
+						<ul>
+							<li><a href="/landingpage">Home</a></li>
+							<li><a href="/hotels">Pet Hotel</a></li>
+							<li><a href="/spas">Pet Spa</a></li>
+							<li><a href="/login">Log In</a></li>
+						</ul>
+					</div>
+				</li>
+			</ul>
+		</nav>
+	</header>
     {{#each products as |product|}}
     <tr>
         <td>{{product.name}}</td>
@@ -9,4 +26,3 @@
         <th><button id={{product.id}}>add to cart</button></th>
     </tr>
     {{/each}}
-</body>
