--- a/public/css/spa.css
+++ b/public/css/spa.css
@@ -7,6 +7,9 @@ body {
     margin-top:-30px!important;
     margin-left:0;
 }
+thead tr {
+    border-bottom:1px solid black;
+}
 
 table thead tr .thead {
     font-weight: 900;
