--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -16,7 +16,15 @@
 			</ul>
 		</nav>
 	</header>
-  <p>{{user.name}}</p>
+
+<body>
+  <div class="row">
+    <div class="col-auto">
+      <h2>Welcome, {{name}}!</h2>
+    </div>
+  </div>
+
+    <p>{{user.name}}</p>
 
             {{#each pets as |pet|}}
 
@@ -27,16 +35,7 @@
 
 
 
-{{!-- <body>
-  <div class="row">
-    <div class="col-auto">
-      <h2>Welcome, {{name}}!</h2>
-    </div>
-  </div>
-
-
-
-  <div class="row mt-4">
+  {{!-- <div class="row mt-4">
     <div class="col-md-6">
       <h3>Create a New Project:</h3>
 
@@ -78,4 +77,4 @@
   </div> --}}
 
   <script src="./js/profile.js"></script>
-{{!-- </body> --}}
+</body>
