Cleaned up html in handlebars and got some more functionality going

--- a/views/hotels.handlebars
+++ b/views/hotels.handlebars
@@ -1,3 +1,7 @@
+<body>
+<!-- Page Wrapper -->
+<div id="page-wrapper">
+
   <header id="header" class="alt">
 		<h1><a href="/landingpage">Petopia</a></h1>
 		<nav id="nav">
@@ -16,6 +20,43 @@
 			</ul>
 		</nav>
 	</header>
+
+    <!-- Two -->
+    <section id="two" class="wrapper alt style2">
+        <section class="spotlight">
+            <div class="image"><img src="./images/unsplash-image-s9Tf1eBDFqw.jpg" alt="" /></div><div class="content">
+                <h2>Pet Hotel</h2>
+                <p>
+                Welcome to our Pet Hotel! Here you can schedule an appointemnt for any of the following services that we provide. If your in need of someone to watch your pet while your away, look no further as our pet hotel is the perfect place. We have many highly trained caretakers that take lots of pride in what they do and will watch, feed, and play with your animal until you get back.<p>
+            </div>
+        </section>
+    </section>
+
+        <!-- Three -->
+        <section id="three" class="wrapper style3 special">
+            <div class="inner">
+                    <h2>Pet Hotel Services</h2>
+                <ul class="features">
+                        <h3>1-day $100</h3>
+                        <p>We will watch, feed, and play with your pet for 1-day</p>
+                        <a href="#" class="button fit primary">Book Now</a>
+                    </li>
+                        <h3>3-days $275</h3>
+                        <p>We will watch, feed, and play with your pet for 3-days</p>
+                        <a href="#" class="button fit primary">Book Now</a>
+                    </li>
+                        <h3>5-days $450</h3>
+                        <p>We will watch, feed, and play with your pet for 5-days</p>
+                        <a href="#" class="button fit primary">Book Now</a>
+                    </li>
+                        <h3>1-week $625</h3>
+                        <p>We will watch, feed, and play with your pet for 1-week</p>
+                        <a href="#" class="button fit primary">Book Now</a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
     <table>
         <thead>
             <tr>
@@ -35,11 +76,14 @@
             </tr>
             {{/each}}
         </tbody>
-        {{!-- <tfoot>
-            <tr>
-                <td colspan="2"></td>
-                <td>100.00</td>
-                <th><button>Add To Cart</button></th>
-            </tr>
-        </tfoot> --}}
     </table>
+</div>
+
+    <!-- Scripts -->
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/jquery.scrolly.min.js"></script>
+    <script src="./js/browser.min.js"></script>
+    <script src="./js/breakpoints.min.js"></script>
+    <script src="./js/util.js"></script>
+    <script src="./js/main.js"></script>
+</body>
