--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,7 +9,6 @@
   <title>Petopia Log In</title>
 </head>
 <body>
-
   <!-- Header -->
   <header id="header" class="alt">
     <h1><a href="/landingpage">Petopia</a></h1>
@@ -29,48 +28,57 @@
       </ul>
     </nav>
   </header>
-<div class="container">
-  <div class="row">
-    <div class="col-md-6">
-      <h2>Login</h2>
-  
-      <form class="form login-form">
-        <div class="form-group">
-          <label for="email-login">Email:</label>
-          <input class="form-input" type="text" id="email-login" />
-        </div>
-        <div class="form-group">
-          <label for="password-login">Password:</label>
-          <input class="form-input" type="password" id="password-login" />
-        </div>
-        <div class="form-group">
-          <button class="btn btn-primary" type="submit">Login</button>
-        </div>
-      </form>
-    </div>
-    <div class="col-md-6">
 
-    <div class="sign-space">
-      <h2>Signup</h2>
-      <form class="form signup-form">
-        <div class="form-group">
-          <label for="name-signup">Name:</label>
-          <input class="form-input" type="text" id="name-signup" />
-        </div>
-        <div class="form-group">
-          <label for="email-signup">Email:</label>
-          <input class="form-input" type="text" id="email-signup" />
-        </div>
-        <div class="form-group">
-          <label for="password-signup">Password:</label>
-          <input class="form-input" type="password" id="password-signup" />
-        </div>
-        <div class="form-group">
-          <button class="btn btn-primary" type="submit">Signup</button>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Login</h2>
+    
+        <form class="form login-form">
+          <div class="form-group">
+            <label for="email-login">Email:</label>
+            <input class="form-input" type="text" id="email-login" />
+          </div>
+          <div class="form-group">
+            <label for="password-login">Password:</label>
+            <input class="form-input" type="password" id="password-login" />
+          </div>
+          <div class="form-group">
+            <button class="btn btn-primary" type="submit">Login</button>
+          </div>
+        </form>
       </div>
-      </form>
+      <div class="col-md-6">
+
+      <div class="sign-space">
+        <h2>Signup</h2>
+        <form class="form signup-form">
+          <div class="form-group">
+            <label for="name-signup">Name:</label>
+            <input class="form-input" type="text" id="name-signup" />
+          </div>
+          <div class="form-group">
+            <label for="email-signup">Email:</label>
+            <input class="form-input" type="text" id="email-signup" />
+          </div>
+          <div class="form-group">
+            <label for="password-signup">Password:</label>
+            <input class="form-input" type="password" id="password-signup" />
+          </div>
+          <div class="form-group">
+            <button class="btn btn-primary" type="submit">Signup</button>
+          </div>
+        </div>
+        </form>
+      </div>
     </div>
   </div>
-</div>
-	<script src="./js/login.js"></script>
+    <script src="./js/login.js"></script>
+    <script src="./js/profile.js"></script>
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/jquery.scrolly.min.js"></script>
+    <script src="./js/browser.min.js"></script>
+    <script src="./js/breakpoints.min.js"></script>
+    <script src="./js/util.js"></script>
+    <script src="./js/main.js"></script>
+  </body>
