--- a/views/spas.handlebars
+++ b/views/spas.handlebars
@@ -1,3 +1,8 @@
+ <body>
+
+<!-- Page Wrapper -->
+<div id="page-wrapper">
+
   <header id="header" class="alt">
 		<h1><a href="/landingpage">Petopia</a></h1>
 		<nav id="nav">
@@ -16,6 +21,43 @@
 			</ul>
 		</nav>
 	</header>
+
+    <!-- Two -->
+    <section id="two" class="wrapper alt style2">
+        <section class="spotlight">
+            <div class="image"><img src="./images/DL2.jpg" alt="" /></div><div class="content">
+                <h2>Pet Spa</h2>
+                <p>Welcome to our Pet Spa! Here you can schedule an appointemnt for any of the following services that we provide. Whether Its a shampoo bath, haircut, brushing, or nail clipping... We have it all! <p>
+            </div>
+        </section>
+    </section>
+
+    <!-- Three -->
+    <section id="three" class="wrapper style3 special">
+        <div class="inner">
+            <h2>Pet Spa Services</h2>
+                <ul class="features">
+                        <h3>Shampoo bath $50</h3>
+                        <p>We will give your animal a bath along with a thorough deep clean and rinse using shampoo</p>
+                        <a href="#" class="button fit primary">Book Now</a>
+                    </li>
+                        <h3>Haircut $60</h3>
+                        <p>Is your animals coat getting too long and scruffy? We will give them a trim up according to what you want</p>
+                        <a href="#" class="button fit primary">Book Now</a>
+                    </li>
+                        <h3>Brushing $40</h3>
+                        <p>We also offer pet brushing which will take your pets scruffy coat and make it silky smooth</p>
+                        <a href="#" class="button fit primary">Book Now</a>
+                    </li>
+                        <h3>Nail Clipping $30</h3>
+                        <p>Lastly we also clip all your pets long nails</p>
+                        <a href="#" class="button fit primary">Book Now</a>
+                    </li>
+                </ul>
+        </div>
+    </section>
+    </div>
+
     <table>
         <thead>
             <tr>
@@ -35,11 +77,13 @@
             </tr>
             {{/each}}
         </tbody>
-        {{!-- <tfoot>
-            <tr>
-                <td colspan="2"></td>
-                <td>100.00</td>
-                <th><button>Add To Cart</button></th>
-            </tr>
-        </tfoot> --}}
     </table>
+
+<!-- Scripts -->
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/jquery.scrolly.min.js"></script>
+    <script src="./js/browser.min.js"></script>
+    <script src="./js/breakpoints.min.js"></script>
+    <script src="./js/util.js"></script>
+    <script src="./js/main.js"></script>
+</body>
