completely re-did the html, css, and handlebars for the profile page... also added some css for the styling of the tables on the spa and hotel pages

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4034,3 +4034,13 @@ table thead {
 	body.is-mobile.landing #footer {
 		background-color: #1d242a;
 	} */
+
+	.inner {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		/* text-align: center; */
+		/* line-height: 100px; */
+		padding: 100px 5% 100px 5%;
+		border-top: 20px solid black;
+	}
