--- a/views/hotels.handlebars
+++ b/views/hotels.handlebars
@@ -51,7 +51,7 @@
                             <td>{{hotel.stayType}}</td>
                             <td>{{hotel.description}}</td>
                             <td>{{hotel.price}}</td>
-                            <th><button id={{hotel.id}}>Schedule Reservation</button></th>
+                            <th><button class="button fit primary" id={{hotel.id}}>Schedule Reservation</button></th>
                         </tr>
                         {{/each}}
                     </tbody>
