--- a/views/spas.handlebars
+++ b/views/spas.handlebars
@@ -51,7 +51,7 @@
                             <td>{{spa.serviceType}}</td>
                             <td>{{spa.description}}</td>
                             <td>{{spa.price}}</td>
-                            <th><button id={{spa.id}}>Schedule Reservation</button></th>
+                            <th><button class="button fit primary" id={{spa.id}}>Schedule Reservation</button></th>
                         </tr>
                         {{/each}}
                     </tbody>
