--- a/public/css/profilepic.css
+++ b/public/css/profilepic.css
@@ -1,471 +1,81 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 
-* {
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
-    /* background-color: lightgrey; */
-}
-body {
-    margin:0;
-    /* background-color: #d1d1d1; */
-}
-.header {
-    margin:auto;
-    /* margin-bottom: 30px; */
-    padding:50px;
-    border:3px solid #000000;
-    background-color: #d1d1d1;
-}
-.petInfo textarea {
-    width:80%;
-    min-width:500px;
-    background-color: ;
-    /* border-radius: 25px; */
-    font-size:1rem;
-    height:50px;
-}
-.petInfo button {
-    padding:10px;
-    background:lawngreen;
-    color:white;
-    font-weight:bold;
-    margin:25px;
-    border-radius:10px;
-}
-.petInfo h3 {
-    margin:20px;
-    font-size:2rem;
-}
-.petInfo {
-    /* background:#d1d1d1; */
-}
-.header h2 {
-    font-size:3rem;
-    margin-bottom:30px;
-    /* color: white; 
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: black; */
-    }
-
-.header h4 {
-    font-size:1.8rem;
-    /* color: white; 
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: black; */
-}
-.hero li {
-    list-style-type: none;
-}
-main h3 {
-    font-size:2rem; 
-    padding:20px 0 20px 0;
-}
-main {
-    /* background-color: #d1d1d1; */
-    /* margin:auto; */
-}
-.float-left {
-    float: left;
-}
-.float-right {
-    float:right;
-}
-@media screen and (min-width: 750px) {
-    .float-left, .float-right, .flex {
-        float: none;
-    }
-
-}
-.hero {
-    width:100%;
-    height:100%;
-    background:white;
-    /*  */
-}
-.hero.one {
-    background:white;
-}
-.flex {
-    display:flex;
+.main{
+    width: 100%;
+    padding-top: 125px;
+    padding-bottom: 50px;
+    display: flex;
     align-items: center;
     justify-content: center;
-}
-.header img {
-    width:180px;
-    height:180px;
-    border-radius:50%;
-    margin-top:40px;
-    margin-bottom: 30px;
-    background-color: white;
-}
-.savedPetInformation {
-    margin:auto;
-    font-size:1.8rem;
-    background-color: white;
-    /* border-bottom:3px solid black; */
-    padding-bottom:0px;
-}
-.savedPetInformation li {
-    margin-bottom:20px;
-}
-.savedPetInformation h3 {
-    padding:20px 0 20px 0;
+    background-position: center;
+    background-size: cover;
 }
 
-.card {
-    width:400px;
-    background: white;
-    padding:40px;
-    border-radius:15px;
-    text-align:center;
-    color:#333;
+.profile-card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 1120px;
+    max-width: 500px;
+    width: 100%;
+    border-radius: 25px;
+    padding: 30px;
 }
 
-.card h1 {
-    font-weight:400;
-    color:#000;
+.dogo-img {
+    height: 300px;
+    width: 300px;
+    border: 5px solid black;
+    object-fit: cover;
 }
 
-.card img {
-    width:180px;
-    height:180px;
-    border-radius:50%;
-    margin-top:40px;
-    margin-bottom: 30px;
-    background-color: white;
-}
-
-label {
-    display:block;
-    width:200px;
-    background:#e3362c;
-    color:#fff;
-    padding:12px;
-    margin:10px auto;
-    border-radius:5px;
-    cursor: pointer;
-
-}
-input {
-    display:none;  
-}
-#footer {
-    padding: 6em 0 4em 0 ;
-    background-color: black;
+.input-upload{
     text-align: center;
+    align-items: center;
+    margin-top: 20px;
 }
 
-    #footer .copyright {
-        color: white;
-        font-size: 0.8em;
-        letter-spacing: 0.225em;
-        list-style: none;
-        padding: 0;
-        text-transform: uppercase;
-    }
+.insert-name {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 15px;
+}
 
-        #footer .copyright li {
-            border-left: solid 1px white;
-            display: inline-block;
-            line-height: 1em;
-            margin-left: 1em;
-            padding-left: 1em;
-        }
+.data{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
 
-            #footer .copyright li:first-child {
-                border-left: 0;
-                margin-left: 0;
-                padding-left: 0;
-            }
+.data h3{
+    font-size: 25px;
+    font-weight: 600;
+}
 
-            #footer .copyright li a {
-                color: inherit;
-            }
+.upload-file{
+    align-items: center;
+    font-size: 25px;
+    font-weight: 600;
+} 
 
-                #footer .copyright li a:hover {
-                    color: #fff;
-                }
+.buttons{
+    margin-top: 50px;
+    display: flex;
+    align-items: center;
+}
 
-            @media screen and (max-width: 480px) {
-
-                #footer .copyright li {
-                    border: 0;
-                    display: block;
-                    line-height: 1.65em;
-                    margin: 0;
-                    padding: 0.5em 0;
-                }
-
-            }
-
-    @media screen and (max-width: 980px) {
-
-        #footer {
-            padding: 4em 3em 2em 3em ;
-        }
-
-    }
-
-    @media screen and (max-width: 736px) {
-
-        #footer {
-            padding: 3em 2em 1em 2em ;
-        }
-
-    }
-    header.major {
-		margin: 0 0 3.5em 0;
-	}
-
-		header.major h2, header.major h3, header.major h4, header.major h5, header.major h6 {
-			border-bottom: solid 2px #fff;
-			display: inline-block;
-			padding-bottom: 1em;
-			position: relative;
-		}
-
-			header.major h2:after, header.major h3:after, header.major h4:after, header.major h5:after, header.major h6:after {
-				content: '';
-				display: block;
-				height: 1px;
-			}
-
-		header.major p {
-			color: #fff;
-			top: 0;
-		}
-
-		@media screen and (max-width: 736px) {
-
-			header.major {
-				margin: 0 0 2em 0;
-			}
-
-		}
-
-	@media screen and (max-width: 980px) {
-
-		header br {
-			display: none;
-		}
-
-	}
-    #header {
-		/* -moz-transition: background-color 0.2s ease;
-		-webkit-transition: background-color 0.2s ease;
-		-ms-transition: background-color 0.2s ease;
-		transition: background-color 0.2s ease; */
-		background: black;
-		height: 3.5em;
-		left: 0;
-		line-height: 3.5em;
-		position: fixed;
-		top: 0;
-		width: 100%;
-		z-index: 10000;
-	}
-
-		#header h1 {
-			font-size: 4rem;
-			/* -moz-transition: opacity 0.2s ease;
-			-webkit-transition: opacity 0.2s ease;
-			-ms-transition: opacity 0.2s ease;
-			transition: opacity 0.2s ease; */
-			height: inherit;
-			left: 1em;
-			line-height: inherit;
-			position: absolute;
-			top: 0;
-		}
-
-			#header h1 a {
-				border: 0;
-				display: block;
-				height: inherit;
-				line-height: inherit;
-			}
-
-				@media screen and (max-width: 736px) {
-
-					#header h1 a {
-						font-size: 0.75em;
-					}
-
-				}
-
-				@media screen and (max-width: 500px) {
-
-					#header nav > ul > li > a.menuToggle span {
-						display: none;
-					}
-
-				}
-
-				@media screen and (max-width: 350px) {
-
-					#header h1 {
-						left: 1rem;
-					}
-
-				}
-
-		#header nav {
-			height: inherit;
-			line-height: inherit;
-			position: absolute; 
-			right: 0;
-			top: 0;
-		}
-
-			#header nav > ul {
-				list-style: none;
-				margin: 0;
-				padding: 0;
-				white-space: nowrap;
-			}
-
-				#header nav > ul > li {
-					display: inline-block;
-					padding: 0;
-				}
-
-					#header nav > ul > li > a {
-						border: 0;
-						color: white;
-						display: block;
-						font-size: 0.8em;
-						letter-spacing: 0.225em;
-						padding: 0 1.5em;
-						text-transform: uppercase;
-					}
-
-						#header nav > ul > li > a.menuToggle {
-							outline: 0;
-							position: relative;
-						} 
-
-							 #header nav > ul > li > a.menuToggle:after {
-								background-position: right center;
-								background-repeat: no-repeat;
-								content: '';
-								display: inline-block;
-								height: 3.75em;
-								vertical-align: top;
-								width: 2em;
-							}
-
-							@media screen and (max-width: 736px) {
-
-								#header nav > ul > li > a.menuToggle {
-									padding: 0 1.5em;
-								}
-
-							}
-
-						@media screen and (max-width: 736px) {
-
-							#header nav > ul > li > a {
-								padding: 0 0 0 1.5em;
-							}
-
-						}
-
-					#header nav > ul > li:first-child {
-						margin-left: 0;
-					}
-                    #menu {
-                        -moz-transform: translateX(20em);
-                        -webkit-transform: translateX(20em);
-                        -ms-transform: translateX(20em);
-                        transform: translateX(20em);
-                        -moz-transition: -moz-transform 0.5s ease;
-                        -webkit-transition: -webkit-transform 0.5s ease;
-                        -ms-transition: -ms-transform 0.5s ease;
-                        transition: transform 0.5s ease;
-                        -webkit-overflow-scrolling: touch;
-                        background: black;
-                        color: white;
-                        height: 100%;
-                        max-width: 80%;
-                        overflow-y: auto;
-                        padding: 3em 2em;
-                        position: fixed;
-                        right: 0;
-                        top: 0;
-                        width: 20em;
-                        z-index: 10002;
-                    }
-                
-                        #menu ul {
-                            list-style: none;
-                            padding: 0;
-                        }
-                
-                            #menu ul > li {
-                                border-top: solid 1px white;
-                                margin: 0.5em 0 0 0;
-                                padding: 0.5em 0 0 0;
-                            }
-                
-                                #menu ul > li:first-child {
-                                    border-top: 0 !important;
-                                    margin-top: 0 !important;
-                                    padding-top: 0 !important;
-                                }
-                
-                                #menu ul > li > a {
-                                    border: 0;
-                                    color: inherit;
-                                    display: block;
-                                    font-size: 0.8em;
-                                    letter-spacing: 0.225em;
-                                    outline: 0;
-                                    text-decoration: none;
-                                    text-transform: uppercase;
-                                }
-                
-                                    @media screen and (max-width: 736px) {
-                
-                                        #menu ul > li > a {
-                                            line-height: 3em;
-                                        }
-                
-                                    }
-                
-                        #menu .close {
-                            /* background-image: url("images/close.svg"); */
-                            background-position: 4.85em 1em;
-                            background-repeat: no-repeat;
-                            border: 0;
-                            cursor: pointer;
-                            display: block;
-                            height: 3em;
-                            position: absolute;
-                            right: 0;
-                            top: 0;
-                            width: 7em;
-                        }
-                
-                        @media screen and (max-width: 736px) {
-                
-                            #menu {
-                                padding: 3em 1.5em;
-                            }
-                
-                        }
-                
-                    body.is-menu-visible #page-wrapper {
-                        opacity: 0.35;
-                    }
-                
-                        body.is-menu-visible #page-wrapper:before {
-                            display: block;
-                        }
-                
-                    body.is-menu-visible #menu {
-                        -moz-transform: translateX(0);
-                        -webkit-transform: translateX(0);
-                        -ms-transform: translateX(0);
-                        transform: translateX(0);
-                    }
-                
+.form-input {
+    color: black;
+    background-color: rgb(193, 193, 193);
+    margin: 1rem;
+    font-size: 1.2rem;
+    border: 5px solid black;
+  }
