--- a/views/landingpage.handlebars
+++ b/views/landingpage.handlebars
@@ -45,13 +45,13 @@
 								<a href="/spas" class="button fit primary">Take Me There</a>
 							</div>
 						</section>
-						<section class="spotlight">
+						{{!-- <section class="spotlight">
 							<div class="image"><img src="./images/GettyImages-1215180165.jpg" alt="" /></div><div class="content">
 								<h2>Pet Products</h2>
 								<p>If you're in need of a restock on pet food, treats, or are looking for a new toy for your pet to enjoy, check out our Pet Products page.<p>
 								<a href="#" class="button fit primary">Take Me There</a>
 							</div>
-						</section>
+						</section> --}}
 					</section>
 			</div>
 
