connected the products page, and was able to pull up user name in profile

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -20,7 +20,9 @@
                       <li><a href="/">Home</a></li>
                       <li><a href="/hotels">Pet Hotel</a></li>
                       <li><a href="/spas">Pet Spa</a></li>
+                      <li><a href="/products">Products</a></li>
                       <li><a href="/login">Log In</a></li>
+                      <li><a id="logout">Log Out</a></li>
                     </ul>
                 </div>
             </li>
@@ -33,7 +35,7 @@
   <section class="main">
   <div class="profile-card">
     <div class="insert-name">
-        <h2>Welcome{{user.name}}</h2>
+        <h2>Welcome! {{user.name}}, and {{pets.userId}}</h2>
      </div>
      <div class="image-profile-html">
         <img class="dogo-img" src="./images/DL2.jpg" id="profile-pic" alt="">
@@ -43,7 +45,7 @@
         <input class="form-input" type="file" accept="image/jpeg, image/png, image/jpg" id="input-file">
     </div>
     <div class="data">
-      <h3>Pet Name{{pet.name}}</h3>
+      <h3>Pet Name </h3>
       <input class="form-input" type="text" id="email-signup" />
     </div>
      <div class="data">
@@ -70,6 +72,7 @@
   </script>
 
   <script src="./js/profile.js"></script>
+  <script src="./js/logout.js"></script>
   <script src="./js/jquery.min.js"></script>
   <script src="./js/jquery.scrolly.min.js"></script>
   <script src="./js/browser.min.js"></script>
