--- a/views/hotels.handlebars
+++ b/views/hotels.handlebars
@@ -13,6 +13,7 @@
 							<li><a href="/">Home</a></li>
 							<li><a href="/hotels">Pet Hotel</a></li>
 							<li><a href="/spas">Pet Spa</a></li>
+                            <li><a href="/products">Products</a></li>
 							<li><a href="/login">Log In</a></li>
 						</ul>
 					</div>
