--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -1,4 +1,8 @@
-  <header id="header" class="alt">
+<body>
+<!-- Page Wrapper -->
+<div id="page-wrapper">
+
+    <header id="header" class="alt">
 		<h1><a href="/">Petopia</a></h1>
 		<nav id="nav">
 			<ul>
@@ -9,6 +13,7 @@
 							<li><a href="/">Home</a></li>
 							<li><a href="/hotels">Pet Hotel</a></li>
 							<li><a href="/spas">Pet Spa</a></li>
+                            <li><a href="/products">Products</a></li>
 							<li><a href="/login">Log In</a></li>
 						</ul>
 					</div>
@@ -16,13 +21,54 @@
 			</ul>
 		</nav>
 	</header>
-    {{#each products as |product|}}
-    <tr>
-        <td>{{product.name}}</td>
-        <td>{{product.description}}</td>
-        <td>{{product.price}}</td>
-        <td>{{product.stock}}</td>
-        <td>{{product.image}}</td>
-        <th><button id={{product.id}}>add to cart</button></th>
-    </tr>
-    {{/each}}
+
+    <!-- Two -->
+    <section id="two" class="wrapper alt style2">
+        <section class="spotlight">
+			<div class="image"><img src="./images/GettyImages-1215180165.jpg" alt="" /></div><div class="content">
+				<h2>Pet Products</h2>
+				<p>If you're in need of a restock on pet food, treats, or are looking for a new toy for your pet to enjoy, check out our Pet Products page.</p>
+			</div>
+		
+        </section>
+
+        <!-- Three -->
+        <section id="three" class="wrapper style3 special">
+            <div class="inner">
+                <h2>Pet Products</h2>
+                <table>
+					<thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Description</th>
+                            <th>Price $:</th>
+                            <th>In Stock</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                       {{#each products as |product|}}
+						<tr>
+							<td>{{product.name}}</td>
+							<td>{{product.description}}</td>
+							<td>{{product.price}}</td>
+							<td>{{product.stock}}</td>
+							<td>{{product.image}}</td>
+							<th><button class="button fit primary" id={{product.id}}>add to cart</button></th>
+						</tr>
+						{{/each}}
+                    </tbody>
+                </table>
+            </div>
+        </section>
+    </div>
+
+    <!-- Scripts -->
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/jquery.scrolly.min.js"></script>
+    <script src="./js/browser.min.js"></script>
+    <script src="./js/breakpoints.min.js"></script>
+    <script src="./js/util.js"></script>
+    <script src="./js/main.js"></script>
+</body>
+ 
+ 
