Proofread and fixed typos and grammar

--- a/views/hotels.handlebars
+++ b/views/hotels.handlebars
@@ -28,7 +28,7 @@
             <div class="image"><img src="./images/unsplash-image-s9Tf1eBDFqw.jpg" alt="" /></div><div class="content">
                 <h2>Pet Hotel</h2>
                 <p>
-                Welcome to our Pet Hotel! Here you can schedule an appointemnt for any of the following services that we provide. If your in need of someone to watch your pet while your away, look no further as our pet hotel is the perfect place. We have many highly trained caretakers that take lots of pride in what they do and will watch, feed, and play with your animal until you get back.<p>
+                Welcome to our Pet Hotel! Here you can schedule an appointment for any of the fexciting pet stays we provide. If you're in need of someone to watch your pet while you're away, look no further as our pet hotel is the perfect place. We have many highly trained caretakers that take lots of pride in what they do and will watch, feed, and play with your animal so you can rest easy while you're away.<p>
             </div>
         </section>
     </section>
