--- a/views/landingpage.handlebars
+++ b/views/landingpage.handlebars
@@ -42,7 +42,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="./images/DL2.jpg" alt="" /></div><div class="content">
 								<h2>Pet Spa</h2>
-								<p>We also offer pet grooming services at our Pet Spa. Whether you want your animal to get a trim up, a wash, or a full-on spa treatment, our Pet Spa is the place for you and your animal. <p>
+								<p>We also offer pet grooming services at our Pet Spa. Whether you want your animal to get a trim-up, a wash, or a full-on spa treatment, our Pet Spa is the place for you and your fur baby. <p>
 								<a href="/spas" class="button fit primary">Take Me There</a>
 							</div>
 						</section>
