--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -27,7 +27,7 @@
         <section class="spotlight">
 			<div class="image"><img src="./images/GettyImages-1215180165.jpg" alt="" /></div><div class="content">
 				<h2>Pet Products</h2>
-				<p>If you're in need of a restock on pet food, treats, or are looking for a new toy for your pet to enjoy, check out our Pet Products page.</p>
+				<p>If you're in need of a restock on pet food, treats, or are looking for a new toy for your pet to enjoy, check out our Pet Products page!</p>
 			</div>
 		
         </section>
