--- a/views/spas.handlebars
+++ b/views/spas.handlebars
@@ -28,7 +28,7 @@
         <section class="spotlight">
             <div class="image"><img src="./images/DL2.jpg" alt="" /></div><div class="content">
                 <h2>Pet Spa</h2>
-                <p>Welcome to our Pet Spa! Here you can schedule an appointemnt for any of the following services that we provide. Whether Its a shampoo bath, haircut, brushing, or nail clipping... We have it all! <p>
+                <p>Welcome to our Pet Spa! Schedule an appointment for any of our pampering services. Whether it's a shampoo bath, haircut, brushing, or nail clipping... We have it all! <p>
             </div>
         </section>
     </section>
